Bug 249608 - Calculation in amount field fails
Summary: Calculation in amount field fails
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-31 12:55 UTC by Thomas Baumgart
Modified: 2010-08-31 14:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-08-31 12:55:53 UTC
Version:           SVN trunk (using KDE 4.3.5) 
OS:                Linux

Using negative numbers during calculation faiils.

Reproducible: Always

Steps to Reproduce:
Create a new transaction, set the focus to the amount field. Enter "-100+33.15" and press return.

Actual Results:  
The result shown is 33.15

Expected Results:  
The result shown is -66,85
Comment 1 Thomas Baumgart 2010-08-31 14:05:49 UTC
SVN commit 1170269 by tbaumgart:

Use QString::remove rather than QString::replace to remove certain character in a string.

BUG: 249608

 M  +4 -4      kmymoneycalculator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170269
Comment 2 Thomas Baumgart 2010-08-31 14:07:04 UTC
SVN commit 1170270 by tbaumgart:

Use QString::remove rather than QString::replace to remove certain character in a string.

BUG: 249608

 M  +4 -4      kmymoneycalculator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170270