Use QString::remove rather than QString::replace to remove certain character in a string.

BUG: 249608

svn path=/branches/kmymoney/4.5/; revision=1170270